--- a/bio.css
+++ b/bio.css
@@ -4,7 +4,7 @@
 	margin-right: 2%;
 }
 .profile{
-	width: 100%
+	width: 100%;
 }
 .click {
 	background-color: Transparent;
@@ -18,4 +18,5 @@
 	margin-bottom: .5%;
 	margin-left: .25%;
 	margin-right: .25%;
+	outline: none;
 }
